..F....... [ZBX-8377] fixed disabled select tags not being displayed correctly in all themes on IE ..F....... [ZBX-8377] fixed disabled buttons in forms not being displayed correctly all themes
git-svn-id: svn://svn.zabbix.com/branches/dev@46937 f4e7fd02-d210-4e34-a1e0-d4093fb66cc2

--- a/ZBX-8377/frontends/php/styles/themes/classic/main.css
+++ b/ZBX-8377/frontends/php/styles/themes/classic/main.css
@@ -54,7 +54,6 @@ ul.favorites { margin: 0; padding: 4px 4px 4px 1em; border: 1px solid #AAAAAA; }
 }
 .footer.ui-widget-content { background: url("images/widget_header.gif") repeat-x scroll #4E6EA7; }
 .border_dotted { border-color: #777; }
-.link_menu[disabled] { color: #aaa; background-color: #eee; }
 
 .classic .ui-state-default, .classic .ui-widget-content .ui-state-default, .classic .ui-widget-header .ui-state-default {
 	background: #EEE; color: #383838;
@@ -145,3 +144,32 @@ table.suggest tr.highlight { background-color: #4F70A8; }
 .menuPopup { border: 1px solid #314979; }
 .menuPopup .title { color: #ffffff; background: #4E6EA7 url(images/widget_header.gif) repeat-x top left; }
 .menuPopup .ui-menu { border: 1px solid #314979; }
+
+.input[readonly], .input[disabled], .input[readonly]:hover, .input[disabled]:hover,
+input.input.formlist[type="button"][disabled], input.input.formlist[type="submit"][disabled] {
+	border-color: #aca899;
+	background: #ffffff;
+	/* ignored by IE for <select> */
+	color: #aca899;
+}
+
+/* disabled <select> font color for IE 9+ */
+select[disabled="disabled"]::-ms-value {
+	color: #aca899;
+}
+
+.link_menu[disabled], .link_menu[disabled]:focus, .link_menu[disabled]:hover {
+	background-color: #eee;
+	color: #aaa;
+}
+
+/* disabled form buttons */
+.input.button[disabled]:hover {
+	background-color: #eee;
+	border-color: #d0d0d0;
+}
+
+/* disabled save button */
+.jqueryinput.input.button[disabled]:hover {
+	border-color: #ffaa33;
+}
