--- a/ZBX-8377/frontends/php/styles/themes/darkorange/main.css
+++ b/ZBX-8377/frontends/php/styles/themes/darkorange/main.css
@@ -429,16 +429,44 @@ span.darklink{ color: #AA5500; }span.darklink:hover{ color: #FF5500; }
 
 .input[readonly], .input[disabled], .input[readonly]:hover, .input[disabled]:hover,
 input.input.formlist[type="button"][disabled], input.input.formlist[type="submit"][disabled] {
-/* NOTE: Ignored by IE */
-	border-color: #DFDFDF;
-	background-color: #777777;
-	color: #DFDFDF;
+	border-color: #dfdfdf;
+	background-color: #919191;
+	/* ignored by IE for <select> */
+	color: #dfdfdf;
+}
+
+/* disabled <select> font color for IE 9+ */
+select[disabled="disabled"]::-ms-value {
+	color: #dfdfdf;
+}
+
+select[disabled="disabled"] option { background-color: #919191; }
+
+.input.link_menu[disabled], .input.link_menu[disabled]:focus, .input.link_menu[disabled]:hover {
+	background-color: transparent;
+}
+
+/* disabled form buttons */
+.input.button[disabled]:hover {
+	background-color: #2f2f2f;
+	border-color: #dfdfdf;
+	color: #dfdfdf;
+}
+
+/* disabled save button */
+.jqueryinput.input.button[disabled]:hover {
+	border-color: #ff5500;
+	color: #dfdfdf;
 }
 
 ul.formlist li.new { background: #2F2F2F; }
 
 .shadow {}
 .shadow:hover{ -webkit-box-shadow: 0 0 6px #FF5500; -moz-box-shadow: 0 0 6px #FF5500; box-shadow: 0 0 6px #FF5500; }
+
+.shadow[disabled]:hover {
+	-webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none;
+}
 
 .select { margin: 1px 4px 1px 1px; }
 .button{  border-color: #FF5500; background: #2f2f2f; color: #FF5500; }
